--- a/apps/frontend/src/App.css
+++ b/apps/frontend/src/App.css
@@ -189,3 +189,10 @@ h1 {
   font-size: 1.25rem;
   font-weight: 600;
 }
+
+.textColor {
+  padding-top: 5rem;
+  color: #13170f;
+  text-decoration: none;
+  transition: border-bottom-color 0.3s ease;
+}
