--- a/apps/frontend/src/App.css
+++ b/apps/frontend/src/App.css
@@ -194,5 +194,5 @@ h1 {
   padding-top: 5rem;
   color: #13170f;
   text-decoration: none;
-  transition: border-bottom-color 0.3s ease;
+  z-index: -10;
 }
